<!--
  ~ Created by Mong Ramos Jr. <mongramosjr@gmail.com> on 9/14/17 7:41 PM
  ~
  ~ Copyright (c) 2017 Victory Global Unlimited Systems Inc. All rights reserved.
  ~
  ~ Last modified 9/13/17 7:33 PM
  -->

<resources>
    <string name="app_name">Victory Global</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_home">Home</string>
    <string name="title_register">Register Account</string>
    <string name="title_activate_code">Activate Code</string>
    <string name="title_upgrade">Upgrade Account</string>

    <string name="title_purchases">Purchases</string>
    <string name="title_current_sales">Current Sales</string>
    <string name="title_genealogy">Genealogy</string>
    <string name="title_payout_reports">Payout Reports</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>

    <!-- facebook -->
    <string name="facebook_app_id">344323752657014</string>
    <string name="fb_login_protocol_scheme">fb344323752657014</string>
    <string name="fb_page_access_token_ryr">EAAE5KR73AHYBABZC0ztDYf1y6Aoyrga6hEpCPJK4CV898v6mnuDQBZAv39DwOnpuPkMmnjjTpbC0s7I8bYGFXtjfjDoI0GfkBPWc0VsjVZACjCKUdidhk8odcoBFqIIM1SlgWZBRA0d2jwSqFAUC5ke7Iqwx1Uz4AnkKp0IVHwZDZD</string>
    <string name="fb_page_access_token_vg">EAAE5KR73AHYBALEb3UtndR0SjiYjrWPaf5yqwOjiPbDJFSZBcDqV7y88pAdgAz11zJoT2UZC5nw4tijLVH3Eob8GKupFS2GWvF5SP1Y3yU3JGZCgzQCY6Xz9RaqKj18pVTMDYQsW1mxy8wTJfAVeHeJENW1OB9kG3QKL6zvZAgZDZD</string>
    <string name="fb_user_id_mong">188501987866116</string>

    <string name="facebook_app_name">Victory Global</string>

    <!-- AdMob -->
    <string name="admob_app_id">ca-app-pub-7232836526709156~3269468932</string>
    <string name="admob_add_id_afterlogin">ca-app-pub-7232836526709156/5867712114</string>
    <string name="admob_add_id_afterlogout">ca-app-pub-7232836526709156/2690884436</string>

    <!-- activation code, upgrade account, register account -->
    <string name="new_account">Set up your business account with us — so you can stand out, and reach your goals</string>
    <string name="upgrade_account">Upgrading your account allows you to earn more</string>
    <string name="register_activation_code" >To be able to earn, activation code must be registered</string>
    <string name="residence_address">Residence address</string>
    <string name="contact_info">Contact Info</string>
    <string name="personal_info">Personal info</string>
    <string name="sponsor_and_placement">Sponsor and placement info</string>
    <string name="account_security">Security</string>

    <string name="distributor_id_hint">Distributor ID</string>
    <string name="activation_code_hint">Activation Code</string>
    <string name="first_name_hint">First Name</string>
    <string name="middle_name_hint">Middle Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="upline_id_hint">Upline ID</string>
    <string name="sponsor_id_hint">Sponsor ID</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="mlm_location_hint">Group</string>
    <string name="email_hint">Email</string>
    <string name="mlm_account_id_hint">Account</string>
    <string name="social_security_number_hint">SSS</string>
    <string name="tax_number_hint">TIN</string>
    <string name="date_of_birth_hint">Birth Date</string>
    <string name="gender_hint">Gender</string>
    <string name="marital_status_hint">Marital Status</string>

    <string name="street_hint">Street</string>
    <string name="city_hint">City</string>
    <string name="region_hint">Province/State</string>
    <string name="postal_code_hint">ZIP Code</string>
    <string name="country_code_hint">Country</string>

    <string name="pickup_center_id_hint">Pickup Center</string>
    <string name="telephone_hint">Telephone</string>
    <string name="mobile_number_hint">Mobile</string>

    <string name="register_completeButtonText">Register</string>
    <string name="upgrade_completeButtonText">Confirm</string>
    <string name="activate_completeButtonText">Confirm</string>
    <string name="login_ButtonText">Log in</string>

    <string name="progress_message">Checking in progress, please wait…</string>
    <string name="login_succesful">Login successful</string>

    <string name="ui_no_distributor">Distributor ID is required</string>
    <string name="ui_no_activation_code">Activation code is required</string>
    <string name="ui_length_distributor">Invalid distributor ID</string>
    <string name="ui_invalid_email">Invalid email</string>
    <string name="ui_invalid_telephone">Invalid telephone</string>
    <string name="ui_no_mobile_number">Mobile Number is required</string>
    <string name="ui_invalid_mobile_number">Invalid mobile number</string>
    <string name="ui_no_first_name">First name is required</string>
    <string name="ui_no_last_name">Last name is required</string>
    <string name="ui_no_password">Password is required</string>
    <string name="ui_valid_password">Password is weak</string>
    <string name="ui_no_verify_password">Verify password is required</string>
    <string name="ui_valid_verify_password">Password not matched</string>

    <string name="ui_no_internet">There is no Internet connection</string>
    <string name="ui_exception">Unexpected error. Try again.</string>
    <string name="ui_unexpected_response">Unable to process. Try again.</string>
    <string name="ui_fb_exception">Error in retrieving newsfeeds. Try again.</string>

    <!--
    <string name="first_name_hint">First Name</string>
    <string name="middle_name_hint">Middle Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="upline_id_hint">Upline ID</string>
    <string name="sponsor_id_hint">Sponsor ID</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="mlm_location_hint">Group</string>
    <string name="email_hint">Email</string>
    <string name="mlm_account_id_hint">Account</string>
    <string name="social_security_number_hint">SSS</string>
    <string name="tax_number_hint">TIN</string>
    <string name="date_of_birth_hint">Birth Date</string>
    <string name="gender_hint">Gender</string>
    <string name="marital_status_hint">Marital Status</string>

    <string name="street_hint">Street</string>
    <string name="city_hint">City</string>
    <string name="region_hint">Province/State</string>
    <string name="postal_code_hint">ZIP Code</string>
    <string name="country_code_hint">Country</string>

    <string name="pickup_center_id_hint">Pickup Center</string>
    <string name="telephone_hint">Telephone</string>
    <string name="mobile_number_hint">Mobile</string>
    -->

    <string name="api_url">http://api.victoryglobal.vg</string>
    <string name="api_account_login">/distributor/auth/login.json</string>
    <string name="api_code_registration">/activation-code/registration.json</string>
    <string name="api_code_checkfirst">/activation-code/registration/checkfirst.json</string>
    <string name="api_upgrade_registration">/activation-code/registration.json</string>
    <string name="api_upgrade_checkfirst">/activation-code/registration/checkfirst.json</string>
    <string name="api_account_registration">/distributor/registration.json</string>
    <string name="api_account_registration_checkfirst">/distributor/registration/checkfirst.json</string>
    <string name="api_pickupcenters">/distributor/pickup-centers.json</string>

    <!-- required authenticated login -->
    <string name="api_account">/distributor/account.json</string>
    <string name="api_payout_reports">/distributor/payout-reports.json</string>
    <string name="api_purchases">/distributor/purchases.json</string>
    <string name="api_current_sales">/victory-global/distributors/current-sales.json</string>
    <string name="api_genealogy">/distributor/genealogy/structure.json</string>

    <string name="full_picture_desc">Full picture</string>
    <string name="play_button_desc">Play button</string>


    <string name="user_authentication">vg.victoryglobal.victoryglobal.user_authentication</string>
    <string name="preference_cookie_store">vg.victoryglobal.victoryglobal.preference_cookie_store</string>


</resources>
