<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Mong Ramos Jr. <mongramosjr@gmail.com> on 11/18/17 1:15 PM
  ~
  ~ Copyright (c) 2017 Victory Global Unlimited Systems Inc. All rights reserved.
  ~
  ~ Last modified 11/18/17 1:13 PM
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_navigation_home"
            android:icon="@drawable/ic_home_white_48dp"
            android:title="Home" />

        <item
            android:id="@+id/drawer_navigation_login"
            android:icon="@drawable/ic_view_list_black_48dp"
            android:title="@string/title_login" />

    </group>
    <item android:title="Account"
          android:id="@+id/drawer_navigation_account">
        <menu>
            <group android:checkableBehavior="single"
                   android:id="@+id/group_menu_login"
                >
            <item
                android:id="@+id/drawer_navigation_genealogy"
                android:icon="@drawable/ic_people_black_48dp"
                android:title="@string/title_genealogy" />
            <item
                android:id="@+id/drawer_navigation_payout_reports"
                android:icon="@drawable/ic_attach_money_black_48dp"
                android:title="@string/title_payout_reports" />
            <item
                android:id="@+id/drawer_navigation_current_sales"
                android:icon="@drawable/ic_assessment_black_48dp"
                android:title="@string/title_current_sales" />
            <item
                android:id="@+id/drawer_navigation_purchases"
                android:icon="@drawable/ic_view_list_black_48dp"
                android:title="@string/title_purchases" />
            <item
                android:id="@+id/drawer_navigation_logout"
                android:icon="@drawable/ic_view_list_black_48dp"
                android:title="@string/title_logout" />
            </group>
        </menu>

    </item>

</menu>
