<!--
  ~ Created by Mong Ramos Jr. <mongramosjr@gmail.com> on 10/29/17 4:26 PM
  ~
  ~ Copyright (c) 2017 Victory Global Unlimited Systems Inc. All rights reserved.
  ~
  ~ Last modified 9/14/17 7:41 PM
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vg.victoryglobal.victoryglobal.fragment.RegisterAccountNew">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/register_account_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_marginRight="@dimen/login_layout_marginRight"
        android:layout_marginLeft="@dimen/login_layout_marginRight"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_account"
            android:textAppearance="@style/itemTitleText"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_name_textinputlayout"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_hint"
                android:inputType="text|textCapWords" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/middle_name_textinputlayout"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/middle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/middle_name_hint"
                android:inputType="text|textCapWords" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/last_name_textinputlayout"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_hint"
                android:inputType="text|textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_security"
            android:textAppearance="@style/itemTitleText"/>

       <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_textinputlayout"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verify_password_textinputlayout"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/verify_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    </ScrollView>

</FrameLayout>