<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="vg.victoryglobal.victoryglobal.fragment.RegisterAccountVerify">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/register_account_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_marginRight="@dimen/login_layout_marginRight"
        android:layout_marginLeft="@dimen/login_layout_marginRight"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/residence_address"
            android:textAppearance="@style/itemTitleText"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/street_textinputlayout"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/street_hint"
                android:inputType="text|textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/city_textinputlayout"
                android:layout_weight="0.5"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city_hint"
                    android:inputType="date" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/region_textinputlayout"
                android:layout_weight="0.5"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/region_hint"
                    android:inputType="text|textCapWords" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/postal_code_textinputlayout"
                android:layout_weight="0.5"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/postal_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postal_code_hint"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/country_code_textinputlayout"
                android:layout_weight="0.5"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/country_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country_code_hint"
                    android:inputType="text|textCapWords" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_info"
            android:textAppearance="@style/itemTitleText"
            android:paddingTop="@dimen/item_title_paddingTop"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_textinputlayout"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/telephone_textinputlayout"
                android:layout_weight="0.5"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telephone_hint"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/mobile_number_textinputlayout"
                android:layout_weight="0.5"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number_hint"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</FrameLayout>
