<!--
  ~ Created by Mong Ramos Jr. <mongramosjr@gmail.com> on 9/9/17 9:19 PM
  ~
  ~ Copyright (c) 2017 Victory Global Unlimited Systems Inc. All rights reserved.
  ~
  ~ Last modified 9/9/17 6:02 PM
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vg.victoryglobal.victoryglobal.fragment.RegisterAccountVerify">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/register_account_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_marginRight="@dimen/login_layout_marginRight"
        android:layout_marginLeft="@dimen/login_layout_marginRight"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Personal Info"
            android:textAppearance="@style/itemTitleText"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_name_textinputlayout"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_hint"
                android:inputType="text|textCapWords" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/middle_name_textinputlayout"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/middle_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/middle_name_hint"
                android:inputType="text|textCapWords" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/last_name_textinputlayout"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_hint"
                android:inputType="text|textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/dob_textinputlayout"
                android:layout_weight="0.5"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth_hint"
                    android:focusable="false"
                    android:longClickable="false"
                    android:inputType="date"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Material.Caption"
                    android:text="@string/marital_status_hint"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/marital_status"
                    android:textAppearance="@android:style/TextAppearance.Widget.EditText"
                    android:hint="@string/marital_status_hint"
                    android:spinnerMode="dialog"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Material.Caption"
                    android:text="@string/gender_hint"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender"
                    android:textAppearance="@android:style/TextAppearance.Material.Display1"
                    android:spinnerMode="dialog"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tin_textinputlayout"
                android:layout_weight="0.5"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tax_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tax_number_hint"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/sss_textinputlayout"
                android:layout_weight="0.5"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/social_security_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/social_security_number_hint"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</FrameLayout>