<!--
  ~ Created by Mong Ramos Jr. <mongramosjr@gmail.com> on 9/14/17 7:41 PM
  ~
  ~ Copyright (c) 2017 Victory Global Unlimited Systems Inc. All rights reserved.
  ~
  ~ Last modified 9/13/17 8:42 PM
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vg.victoryglobal.victoryglobal.fragment.RegisterAccountSecurity">

    <LinearLayout
        android:id="@+id/register_account_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:paddingTop="@dimen/vertical_spacing"
        android:layout_marginRight="@dimen/form_container_paddingRight"
        android:layout_marginLeft="@dimen/form_container_paddingLeft"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_security"
            android:paddingTop="@dimen/vertical_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

       <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_textinputlayout"
            android:layout_marginTop="@dimen/form_textinputlayout_marginVertical"
            android:layout_marginBottom="@dimen/form_textinputlayout_marginVertical"
           >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verify_password_textinputlayout"
            android:layout_marginTop="@dimen/form_textinputlayout_marginVertical"
            android:layout_marginBottom="@dimen/form_textinputlayout_marginVertical"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/verify_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</FrameLayout>